@@ -4,6 +4,8 @@
 	* Headers/gnustep/base/NSNumberFormatter.h:
 	* Headers/gnustep/base/NSObject.h:
 	Minor fixes to build with STRICT_OPENSTEP
+	* Source/NSDistributedNotificationCentre.m: Attempt to start server
+	automatically for other machines.  Improve log messages.
 
 Sat Mar  9 15:21:04 2002  Adam Fedor  <fedor@yogi.doc.com>
 
